# docs/swagger.json
@@ -84,6 +84,44 @@
                         }
                     }
                 }
+            },
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "products"
+                ],
+                "summary": "Update Product",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Product ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Request Body",
+                        "name": "requestBody",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/ProductRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/UpdateProductResponse"
+                        }
+                    }
+                }
             }
         }
     },
@@ -92,7 +130,7 @@
             "type": "object",
             "properties": {
                 "data": {
-                    "$ref": "#/definitions/dto.ProductResponseDTO"
+                    "$ref": "#/definitions/ProductResponse"
                 },
                 "responseCode": {
                     "type": "integer"
@@ -106,7 +144,7 @@
             "type": "object",
             "properties": {
                 "data": {
-                    "$ref": "#/definitions/dto.ProductResponseDTO"
+                    "$ref": "#/definitions/ProductResponse"
                 },
                 "responseCode": {
                     "type": "integer"
@@ -122,7 +160,7 @@
                 "data": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/dto.ProductResponseDTO"
+                        "$ref": "#/definitions/ProductResponse"
                     }
                 },
                 "responseCode": {
@@ -148,7 +186,7 @@
                 }
             }
         },
-        "dto.ProductResponseDTO": {
+        "ProductResponse": {
             "type": "object",
             "properties": {
                 "id": {
@@ -158,6 +196,20 @@
                     "type": "string"
                 },
                 "type": {
+                    "type": "string"
+                }
+            }
+        },
+        "UpdateProductResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/ProductResponse"
+                },
+                "responseCode": {
+                    "type": "integer"
+                },
+                "responseMessage": {
                     "type": "string"
                 }
             }
